# berdyUnitTest

./: CMakeLists.txt
data/: CMakeLists.txt  testModels.h.in
include/: berdyUnitTest.h
src/: BerdyHelperUnitTest.cpp  berdyUnitTest.cpp  main.cpp
